# couverture_multi_flux

./: .gitignore  README.md  compare_portfolios.py  couverture_multi_flux.sln  nuget.config  questions_profs.md
EvalCases/Basket_1/: basket_1_mkt_data.csv
EvalCases/Basket_2/: basket_2_mkt_data.csv
EvalCases/Max_3/: max_3_mkt_data.csv
EvalCases/Max_4/: max_4_mkt_data.csv
EvalCases2025/Basket_2/: basket_2_mkt_data.csv
EvalCases2025/Max_2/: max_2_mkt_data.csv
EvalCases2025/Max_3/: max_3_mkt_data.csv
HedgingEngine/: HedgingEngine.csproj  Program.cs  output_portfolio1.json  output_portfolio2.json  output_portfolio3.json  output_portfolio4.json
HedgingEngine/Core/: BacktestEngine.cs  HedgeEngine.cs  HedgingSimulator.cs
HedgingEngine/Hedging/: Hedging.cs
HedgingEngine/Helpers/: FileHelper.cs  MarketDataHelper.cs
HedgingEngine/IO/: InputReader.cs  OutputWriter.cs
HedgingEngine/Models/: HedgingParams.cs  (+1 more)
PricerEngine/: BlackScholesModel.cpp  BlackScholesModel.hpp  CMakeLists.txt  Capitalization.hpp  ConditionalBasketOption.cpp  ConditionalBasketOption.hpp  ConditionalMaxOption.cpp  ConditionalMaxOption.hpp  MultiFlowCallOption.cpp  MultiFlowCallOption.hpp  Option.cpp  Option.hpp  pricer.cpp  pricer.hpp  pricing_server.cpp  test_pricing.cpp
TestImplem/TestPricing/: CMakeLists.txt  test_pricing.cpp
output/: basket843.json  basket_1_portfolio.json  basket_2_portfolio.json  basket_3_portfolio.json  basket_4_portfolio.json  max531.json  max843.json  max_1_portfolio.json  max_2_portfolio.json  max_3_portfolio.json  max_4_portfolio.json  test_portfolio.json
(+14 files in other folders)
